--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "main": "./server/server.js",
-    "proxy": "https://localhost:6666",
+    "proxy": "http://localhost:6666",
     "dependencies": {
         "axios": "^0.19.0",
         "bcryptjs": "^2.4.3",
